syntax = "proto3";
package proto;
option go_package = "proto";

message UrlList {
  repeated string Url = 1;
  int64 count = 2;
}

message LimitDown {
  int64 rate = 1;
}

message TaskCount {
  int64 count = 1;
}

message Response {
  int64 status = 1;
}
message Empty{}

service ApiServer {
  rpc AddUrl (UrlList)returns(Response);
  rpc Limit (UrlList)returns(Response);
  rpc GetTaskCount (Empty)returns(TaskCount);
}